<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/NoBar"
    tools:context=".MainActivity"
    android:screenOrientation="portrait">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/main_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pic"
            android:contentDescription="@string/TalkBackDesrciptOfBackground"/>

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="70dp"
            android:src="@drawable/daycom_logo"
            android:textAlignment="center"
            android:contentDescription="@string/TalkBackLogo"/>

        <TextView
            android:id="@+id/TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:textSize="17sp"
            android:text="@string/msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/catalogBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="20dp"
            android:text="@string/catalog"/>

        <Button
            android:id="@+id/checkStatusBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="480dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/checkStatus"/>

        <Button
            android:id="@+id/aboutBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginTop="540dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/aboutUs" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>